debezium/dbz#1797 Support same signal action name for different connector
Signed-off-by: Fiore Mario Vitale <mvitale@redhat.com>